--- a/app/src/main/res/layout/fragment_sub_amount.xml
+++ b/app/src/main/res/layout/fragment_sub_amount.xml
@@ -3,10 +3,11 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
     <TextView android:text="@string/default_total" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="78dp"
         android:id="@+id/cardTotal2"
         android:textSize="60sp"
-        android:layout_centerHorizontal="true" />
+        android:layout_above="@+id/change1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="71dp" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
