--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
-    <dimen name="button_pressed_z_material">5dp</dimen>
-    <dimen name="button_elevation_material">6dp</dimen>
+    <dimen name="button_pressed_z_material">4dp</dimen>
+    <dimen name="button_elevation_material">4dp</dimen>
+    <dimen name="button_height">80dp</dimen>
 </resources>
